# python

./: .gitignore  README.ja.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/jpzip/: __init__.py  _async_client.py  _cache.py  _client.py  _http.py  _types.py
tests/: test_lookup.py
