[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jpzip"
version = "0.1.0"
description = "Python SDK for jpzip — Japanese postal-code lookup served from a static CDN."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "nadai" }]
keywords = ["zipcode", "postal-code", "japan", "jpzip"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet",
]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://jpzip.nadai.dev"
Repository = "https://github.com/jpzip/python"
Specification = "https://github.com/jpzip/spec"

[tool.hatch.build.targets.wheel]
packages = ["src/jpzip"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
